# rustcroissant

./: .gitignore  Cargo.toml  README.md  build.rs  default.nix  flake.nix  result
.github/workflows/: main.yml
sample_csv/: data.csv
samples_jsonld/: invalid_references.jsonld  missing_fields.jsonld  test1.jsonld  titanic.jsonld
src/: lib.rs  main.rs
src/croissant/: core.rs  errors.rs  generate.rs  mod.rs  utils.rs  validate.rs  validation.rs
src/version/: mod.rs  version.rs  version_info.rs
