[package]
name = "rustcroissant"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
csv = "1.3.1"
hex = "0.4.3"
path-clean = "1.0.1"
rand = "0.9.1"
serde = {version="1.0.219", features=["derive"]}
serde_json = "1.0.142"
sha2 = "0.10.9"
tempfile = "3.20.0"
thiserror = "2.0.15"

[build-dependencies]
chrono = "0.4"
